all nessesary files to deploy

--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippyjs/react": "^4.2.5",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
+    "fractional": "^1.0.0",
+    "ftellipsis": "^0.2.3",
+    "get-youtube-id": "^1.0.1",
+    "icons": "^1.0.0",
+    "mathjs": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-id-generator": "^3.0.1",
+    "react-lines-ellipsis": "^0.15.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
